# VRecommendSystem

./: .dockerignore  .env.backup  .env.development  .env.example  .gitignore  CHANGELOG_KAFKA.md  CLEANUP_SUMMARY.md  DOCKER_ANALYSIS.md  DOCKER_SETUP.md  KAFKA_BROKER_FIX.md  KAFKA_CHEATSHEET.md  KAFKA_FIX_COMPLETE.md  KAFKA_FIX_GUIDE.md  KAFKA_QUICK_FIX.md  KAFKA_TRAINING_GUIDE.md  LOCAL_DEVELOPMENT.md  Makefile  README.md  SETUP_DDNS.md  UPDATES_SUMMARY.md  WHITELIST_SETUP.md  dev-setup.cmd  docker-compose.yml  docker-env-example  docker-start.sh  example-env  fix-session.cmd  install-deps.cmd  install-deps.sh  kafka-start.cmd  quick-setup.cmd  run_backend.sh  run_frontend.sh  send-kafka-messages.cmd  setup-lan-access.cmd  setup-lan-access.sh  setup-ngrok-oauth.cmd  setup-oauth-lan.cmd  start-local.cmd  start-local.sh  (+10 more)
backend/ai_server/: .dockerignore  Dockerfile  Makefile  README.md  TASK_WORKFLOW.md  docker-compose.yml  example-env  pom.xml  prometheus.yml  pyproject.toml  start.cmd
backend/ai_server/ai_server/: __main__.py  eenv
backend/ai_server/ai_server/docs/: tree-folder.md
backend/ai_server/ai_server/internal/: user_service.py
backend/ai_server/ai_server/pkg/: __init__.py
backend/ai_server/ai_server/pkg/configs/: __init__.py  database_config.py  kafka_config.py  log_config.py  middlewares_config.py  redis_config.py  server_config.py  spark_config.py
backend/ai_server/ai_server/pkg/database/: __init__.py  connection_manager.py  redis_manager.py
backend/ai_server/ai_server/pkg/interfaces/: __init__.py  iprovider.py
backend/ai_server/ai_server/pkg/models/: __init__.py
backend/ai_server/ai_server/pkg/routes/: __init__.py  public_routes.py
backend/ai_server/ai_server/pkg/utils/: __init__.py  connection_url_builder.py  logger.py
backend/ai_server/ai_server/tests/models/: als.py
backend/ai_server/config/: STORAGE_EXPLANATION.md  UPDATE_DATA_CHEF_FLOW.md  local.yaml  restaurant_data.yaml  restaurant_data_EXAMPLE_WITH_CUSTOM_DB.yaml
backend/ai_server/config/scheduler/: auto_schedule_config.json  schedule_config.json
backend/ai_server/models/: demo_model.pkl  demo_model_config.json  demo_model_metadata.json  model_config_1.yaml  model_config_2.yaml  model_kafka.pkl  model_kafka_config.json  model_kafka_metadata.json  model_test.pkl  model_test_config.json  model_test_metadata.json  my_model.json  my_model.pkl  my_model_config.json  my_model_metadata.json  test_csv.pkl  test_csv_config.json  test_csv_metadata.json  url_test.pkl  url_test_config.json  url_test_metadata.json
backend/ai_server/pkg/interfaces/: imodel.py
backend/ai_server/src/ai_server/: main.py
backend/ai_server/src/ai_server/config/: config.py  kafka.yaml  local.yaml  restaurant_data.yaml
backend/ai_server/src/ai_server/database/: nosql.py  sql.py
backend/ai_server/src/ai_server/handlers/: recommend_handler.py
backend/ai_server/src/ai_server/initialize/: config.py  logger.py  prometheus.py  routers.py  (+1 more)
backend/ai_server/tasks/: model_a_config.json  model_kafka.json  model_test.json  my_model.json  task_a.json  test_csv.json  url_test.json
backend/ai_server/tests/: test1.py  test2.py  test3.py
backend/ai_server/tests/data/: ecommerce_clickstream_transactions.csv
backend/ai_server/tests/models/: als_example.pkl  als_example_config.json  my_als_model.pkl  my_als_model_config.json  my_model.pkl  my_model_config.json  my_model_metadata.json  ncf_example.pkl  ncf_example_config.json
(+389 files in other folders)
