[project]
name = "ai_server"
version = "0.1.0"
description = "This is AI Server."
authors = [
    {name = "VennV", email = "hyplex9009@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = "3.9"
dependencies = [
    "fastapi==0.116.1",
    "graphviz==0.21",
    "prometheus-client==0.22.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic==2.11.7",
    "PyYAML==6.0.2",
    "rapidfuzz==3.13.0",
    "ruamel.base==1.0.0",
    "ruamel.yaml==0.18.14",
    "redis==6.2.0",
    "uvicorn==0.35.0",
    "poetry==2.1.3",
    "sqlalchemy==2.0.41",
    "loguru==0.7.3",
    "scipy==1.13.1",
    "torch==2.7.1",
    "keras==3.10.0",
    "confluent-kafka==2.11.0",
    "kafka==1.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
