[project]
name = "ai-server"
version = "0.1.0"
description = ""
authors = [
    { name = "VennV", email = "hyplex9009@gmail.com" }
]
readme = "README.md"
requires-python = "3.9.23"
dependencies = [
    "fastapi==0.116.1",
    "graphviz==0.21",
    "prometheus-client==0.22.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic==2.11.7",
    "PyYAML==6.0.2",
    "rapidfuzz==3.13.0",
    "ruamel.base==1.0.0",
    "ruamel.yaml==0.18.14",
    "redis==6.2.0",
    "uvicorn==0.35.0",
    "sqlalchemy==2.0.41",
    "loguru==0.7.3",
    "scipy==1.13.1",
    "torch==2.7.1",
    "keras==3.10.0",
    "confluent-kafka==2.11.0",
    "hydra-core==1.3.2",
    "pymongo==4.14.0",
    "scheduler==0.8.8",
    "lightfm==1.17",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[tool.poetry.scripts]
server = "ai_server.main:main"

[tool.poetry]
packages = [{ include = "ai_server", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
