[tool.poetry]
name = "ai-server"
version = "0.1.0"
description = ""
authors = ["VennV <hyplex9009@gmail.com>"]
packages = [{ include = "ai_server", from = "src" }]

[tool.poetry.dependencies]
python = ">3.9.1,<4.0"
fastapi = "0.116.1"
graphviz = "0.21"
prometheus-client = "0.22.1"
prometheus-fastapi-instrumentator = "7.1.0"
pydantic = "2.11.7"
PyYAML = "6.0.2"
rapidfuzz = "3.13.0"
"ruamel.base" = "1.0.0"
"ruamel.yaml" = "0.18.14"
redis = "6.2.0"
uvicorn = "0.35.0"
sqlalchemy = "2.0.41"
loguru = "0.7.3"
scipy = "1.13.1"
torch = "2.7.1"
keras = "3.10.0"
confluent-kafka = "2.11.0"
hydra-core = "1.3.2"
pymongo = "4.14.0"
scheduler = "0.8.8"
cryptography = "45.0.7"
scikit-learn = "1.6.1"
pandas = "2.3.1"
PyMySQL = "1.1.1"
PyJWT = "2.10.1"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
server = "ai_server.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"